# DppLearningBot

./: CMakeLists.txt  README.md  main.cpp  register_commands.cpp
commands/: commands.h  definitions.h  ping.h
events/: events.h  interactionCreate.h  ready.h
includes/: dotenv.h
